--- a/stories.html
+++ b/stories.html
@@ -266,7 +266,7 @@
   <section class="page-intro">
     <div class="intro-inner">
       <h1 class="gradient-heading">Featured Fiction</h1>
-      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent luctus feugiat nunc, nec tincidunt nisi tempor vel.</p>
+      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline.This page features standout stories in one place so that you can read them in-browser instead of via digital flipbook, if you'd like</p>
       <div class="intro-actions">
         <a class="btn" href="submit.html">Submit Your Story</a>
         <a class="btn btn-ghost" href="fiction.html">Browse All Issues</a>
