--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
   </section>
 
   <section class="grid" id="features">
-    <a href="fiction.html" class="card-link">
+    <a href="stories.html" class="card-link">
       <div class="card">
         <img src="AL Cover.png" alt="Featured Stories image">
         <h3>Issue Library</h3>
@@ -351,7 +351,7 @@
     <a href="bestmedia.html" class="card-link">
       <div class="card">
         <img src="NM Art.png" alt="Poll image">
-        <h3>Cyberpunk Media Ranked</h3>
+        <h3>Featured Stories</h3>
       </div>
     </a>
     <a href="staffpicks.html" class="card-link">
@@ -415,5 +415,6 @@
   </script>
 </body>
 </html>
+
 
 
