--- a/index.html
+++ b/index.html
@@ -342,13 +342,13 @@
   </section>
 
   <section class="grid" id="features">
-    <a href="stories.html" class="card-link">
+    <a href="issues.html" class="card-link">
       <div class="card">
         <img src="AL Cover.png" alt="Featured Stories image">
         <h3>Issue Library</h3>
       </div>
     </a>
-    <a href="bestmedia.html" class="card-link">
+    <a href="stories.html" class="card-link">
       <div class="card">
         <img src="NM Art.png" alt="Poll image">
         <h3>Featured Stories</h3>
@@ -415,6 +415,7 @@
   </script>
 </body>
 </html>
+
 
 
 
