--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
   </section>
 
   <section class="grid" id="features">
-    <a href="issues.html" class="card-link">
+    <a href="fiction.html" class="card-link">
       <div class="card">
         <img src="AL Cover.png" alt="Featured Stories image">
         <h3>Issue Library</h3>
@@ -415,6 +415,7 @@
   </script>
 </body>
 </html>
+
 
 
 
