--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       text-decoration: underline;
     }
 
-    /* Grid band (keep spacing from light version, switch to dark w/ cyan stripes) */
+    /* Grid band */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -310,20 +310,20 @@
   <div style="flex: 1 1 300px;">
     <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
     <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
-      <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>The Memory Blackout</strong> by Dex Silva</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Story Title]</strong> by [Author Name]</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Story Title]</strong> by [Author Name]</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Story Title]</strong> by [Author Name]</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Story Title]</strong> by [Author Name]</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Story Title]</strong> by [Author Name]</li>
     </ul>
   </div>
 
   <div style="flex: 1 1 300px;">
     <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
     <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
-      <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Artwork Name]</strong> by [Artist Name]</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Artwork Name]</strong> by [Artist Name]</li>
+      <li style="margin-bottom: 0.75rem;"><strong>[Artwork Name]</strong> by [Artist Name]</li>
     </ul>
   </div>
 </div>
@@ -374,7 +374,7 @@
       </div>
       <div class="footer-column">
         <h4 style="color: var(--cyan);">Get In Touch</h4>
-        <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
+        <p>contact@burnlinemag.com<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
       <div class="footer-column">
         <h4 style="color: var(--cyan);">Read</h4>
@@ -415,8 +415,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
