--- a/fiction.html
+++ b/fiction.html
@@ -191,19 +191,19 @@
           <div>
             <h3>Fiction</h3>
             <ul>
-              <li><strong>Neon Ashes</strong> by J. M. Caldwell</li>
-              <li><strong>Chrome Dreams</strong> by Riko Ahn</li>
-              <li><strong>The Memory Blackout</strong> by Dex Silva</li>
-              <li><strong>Smog Season</strong> by Aliya Zhang</li>
-              <li><strong>Datalace</strong> by T.J. Krow</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
             </ul>
           </div>
           <div>
             <h3>Artwork</h3>
             <ul>
-              <li><strong>Neural Bloom</strong> by Keira Vonn</li>
-              <li><strong>Ghost Signal</strong> by M. Reyes</li>
-              <li><strong>Synth Skin</strong> by ARTI.FX</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
             </ul>
           </div>
         </div>
@@ -225,19 +225,19 @@
           <div>
             <h3>Fiction</h3>
             <ul>
-              <li><strong>Neon Ashes</strong> by J. M. Caldwell</li>
-              <li><strong>Chrome Dreams</strong> by Riko Ahn</li>
-              <li><strong>The Memory Blackout</strong> by Dex Silva</li>
-              <li><strong>Smog Season</strong> by Aliya Zhang</li>
-              <li><strong>Datalace</strong> by T.J. Krow</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
             </ul>
           </div>
           <div>
             <h3>Artwork</h3>
             <ul>
-              <li><strong>Neural Bloom</strong> by Keira Vonn</li>
-              <li><strong>Ghost Signal</strong> by M. Reyes</li>
-              <li><strong>Synth Skin</strong> by ARTI.FX</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
             </ul>
           </div>
         </div>
@@ -259,19 +259,19 @@
           <div>
             <h3>Fiction</h3>
             <ul>
-              <li><strong>Neon Ashes</strong> by J. M. Caldwell</li>
-              <li><strong>Chrome Dreams</strong> by Riko Ahn</li>
-              <li><strong>The Memory Blackout</strong> by Dex Silva</li>
-              <li><strong>Smog Season</strong> by Aliya Zhang</li>
-              <li><strong>Datalace</strong> by T.J. Krow</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
+              <li><strong>[Story Title]</strong> by [Author Name]</li>
             </ul>
           </div>
           <div>
             <h3>Artwork</h3>
             <ul>
-              <li><strong>Neural Bloom</strong> by Keira Vonn</li>
-              <li><strong>Ghost Signal</strong> by M. Reyes</li>
-              <li><strong>Synth Skin</strong> by ARTI.FX</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
+              <li><strong>[Artwork Name]</strong> by [Artist Name]</li>
             </ul>
           </div>
         </div>
@@ -297,13 +297,13 @@
       </div>
       <div class="footer-column">
         <h4 style="color: var(--neon);">Get In Touch</h4>
-        <p>contact@burnline.net<br><span style="font-size:0.8rem;">(no story submissions by email)</span></p>
+        <p>contact@burnlinemag.com<br><span style="font-size:0.8rem;">(no story submissions by email)</span></p>
       </div>
       <div class="footer-column">
         <h4 style="color: var(--neon);">Read</h4>
-        <p><a href="#" style="color:#ccc; text-decoration:none;">Neon Dystopia</a></p>
-        <p><a href="#" style="color:#ccc; text-decoration:none;">Future//Tense</a></p>
-        <p><a href="#" style="color:#ccc; text-decoration:none;">HackDust</a></p>
+        <p><a href="#" style="color:#ccc; text-decoration:none;">Issue 01</a></p>
+        <p><a href="#" style="color:#ccc; text-decoration:none;">Issue 02</a></p>
+        <p><a href="#" style="color:#ccc; text-decoration:none;">Issue 03</a></p>
       </div>
     </div>
     <div class="footer-bottom">
