--- a/fiction.html
+++ b/fiction.html
@@ -148,19 +148,19 @@
       .issue-hero .cover{max-width:100%; flex:0 0 auto;}
     }
 
-    /* Flipbook section (same behavior as homepage) */
-    #latest-issue {
-      padding: 4rem 2rem;
+    /* Flipbook sections (hidden by default, same styling block reused) */
+    .flipbook-section {
+      padding: 3rem 0 0;
       text-align: center;
-      display: none; /* hidden by default like homepage */
+      display: none;
     }
-    #latest-issue .fp-iframe {
+    .flipbook-section .fp-iframe {
       border: 1px solid var(--border-dark);
       width: 100%;
       height: 400px;
       background: #000;
     }
-    #latest-issue a {
+    .flipbook-section a {
       color: var(--neon);
       text-decoration: underline;
     }
@@ -199,7 +199,7 @@
 
     <!-- Issue 003 -->
     <section class="issue-hero" id="issue-003">
-      <a href="#latest-issue" class="cover js-open-flipbook" aria-label="Open Issue 03 flipbook">
+      <a href="#flip-003" class="cover js-open-flipbook" data-target="flip-003" aria-label="Open Issue 03 flipbook">
         <img src="Burnline Issue 03.png" alt="Issue 03 cover" loading="lazy" width="900" height="1200">
       </a>
       <div class="text">
@@ -225,15 +225,23 @@
           </div>
         </div>
         <div class="cta">
-          <a class="btn toggle-flipbook js-open-flipbook" href="#latest-issue">Read Issue</a>
+          <a class="btn toggle-flipbook js-open-flipbook" href="#flip-003" data-target="flip-003">Read Issue</a>
           <a class="btn secondary" href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Download PDF</a>
         </div>
       </div>
     </section>
 
+    <!-- Flipbook for Issue 003 -->
+    <section id="flip-003" class="flipbook-section">
+      <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/6c786ba517.html"></iframe>
+      <p style="margin-top: 1rem;">
+        <a href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Open in Fullscreen</a>
+      </p>
+    </section>
+
     <!-- Issue 002 -->
     <section class="issue-hero" id="issue-002">
-      <a href="#latest-issue" class="cover js-open-flipbook" aria-label="Open Issue 02 flipbook">
+      <a href="#flip-002" class="cover js-open-flipbook" data-target="flip-002" aria-label="Open Issue 02 flipbook">
         <img src="Burnline Issue 02.png" alt="Issue 02 cover" loading="lazy" width="900" height="1200">
       </a>
       <div class="text">
@@ -259,15 +267,23 @@
           </div>
         </div>
         <div class="cta">
-          <a class="btn toggle-flipbook js-open-flipbook" href="#latest-issue">Read Issue</a>
+          <a class="btn toggle-flipbook js-open-flipbook" href="#flip-002" data-target="flip-002">Read Issue</a>
           <a class="btn secondary" href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Download PDF</a>
         </div>
       </div>
     </section>
 
+    <!-- Flipbook for Issue 002 -->
+    <section id="flip-002" class="flipbook-section">
+      <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/6c786ba517.html"></iframe>
+      <p style="margin-top: 1rem;">
+        <a href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Open in Fullscreen</a>
+      </p>
+    </section>
+
     <!-- Issue 001 -->
     <section class="issue-hero" id="issue-001">
-      <a href="#latest-issue" class="cover js-open-flipbook" aria-label="Open Issue 01 flipbook">
+      <a href="#flip-001" class="cover js-open-flipbook" data-target="flip-001" aria-label="Open Issue 01 flipbook">
         <img src="Burnline Issue 01.png" alt="Issue 01 cover" loading="lazy" width="900" height="1200">
       </a>
       <div class="text">
@@ -293,21 +309,21 @@
           </div>
         </div>
         <div class="cta">
-          <a class="btn toggle-flipbook js-open-flipbook" href="#latest-issue">Read Issue</a>
+          <a class="btn toggle-flipbook js-open-flipbook" href="#flip-001" data-target="flip-001">Read Issue</a>
           <a class="btn secondary" href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Download PDF</a>
         </div>
       </div>
     </section>
 
-  </main>
+    <!-- Flipbook for Issue 001 -->
+    <section id="flip-001" class="flipbook-section">
+      <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/6c786ba517.html"></iframe>
+      <p style="margin-top: 1rem;">
+        <a href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Open in Fullscreen</a>
+      </p>
+    </section>
 
-  <!-- Shared flipbook section (hidden by default, same as homepage) -->
-  <section id="latest-issue">
-    <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/6c786ba517.html"></iframe>
-    <p style="margin-top: 1rem;">
-      <a href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Open in Fullscreen</a>
-    </p>
-  </section>
+  </main>
 
   <footer>
     <div class="footer-container">
@@ -342,28 +358,31 @@
       nav.classList.toggle('active');
     }
 
-    // --- Flipbook behavior copied to match homepage ---
-    function openFlipbook(event) {
-      if (event) event.preventDefault();
-      const section = document.getElementById('latest-issue');
-      const isHidden = section.style.display === 'none' || section.style.display === '';
+    // Individual flipbook toggles
+    function toggleFlipbook(event) {
+      event.preventDefault();
+      const targetId = this.getAttribute('data-target');
+      if (!targetId) return;
 
-      // Update all "Read Issue" buttons to reflect state (so they behave consistently)
-      const buttons = document.querySelectorAll('.toggle-flipbook');
+      const section = document.getElementById(targetId);
+      if (!section) return;
+
+      const isHidden = section.style.display === 'none' || section.style.display === '';
+      const relatedButtons = document.querySelectorAll('[data-target="'+targetId+'"]');
 
       if (isHidden) {
         section.style.display = 'block';
-        buttons.forEach(btn => { btn.textContent = 'Hide Issue'; });
+        relatedButtons.forEach(btn => { if (btn.classList.contains('toggle-flipbook')) btn.textContent = 'Hide Issue'; });
         section.scrollIntoView({ behavior: 'smooth' });
       } else {
         section.style.display = 'none';
-        buttons.forEach(btn => { btn.textContent = 'Read Issue'; });
+        relatedButtons.forEach(btn => { if (btn.classList.contains('toggle-flipbook')) btn.textContent = 'Read Issue'; });
       }
     }
 
-    // Attach to all triggers: cover links + buttons
+    // Attach to all covers and buttons
     document.querySelectorAll('.js-open-flipbook').forEach(el => {
-      el.addEventListener('click', openFlipbook);
+      el.addEventListener('click', toggleFlipbook);
     });
   </script>
 </body>
